--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 on:
   pull_request:
     types: [opened,edited]
+  pull_request:
+    types: [opened,edited]
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
