--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
-on: [pull_request,pull_request_review,issue_comment]
- types: edited
+on:
+  pull_request:
+    types: [opened,edited]
+  pull_request_review:
+    types: [opened,edited]
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
