--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 on:
   pull_request:
     types: [opened,edited]
-  pull_request_review:
-    types: [dismissed,edited]
+  pull_request_review_comment:
+    types: [created,deleted,edited]
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
