--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,8 @@ on:
     types: [opened,edited]
   pull_request_review_comment:
     types: [created,deleted,edited]
+  issue_comment:
+    types: [created,deleted,edited]
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
