--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,10 @@
-on: [pull_request,pull_request_review_comment,issue_comment]
-    types: [created,deleted,edited]
+on:
+  pull_request:
+    types: [opened,edited]
+  pull_request_review_comment:
+    types: [created,edited]
+  issue_comment:
+    types: [created,edited]
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
