--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -1,6 +1,6 @@
 on:
-  pull_request:
-    types: [opened,edited]
+  issue_comment:
+    types: [created,edited]
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
