--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,9 @@ jobs:
   hello_world_job:
     runs-on: ubuntu-latest
     name: A job to say hello
-    steps:
+    - uses: actions/checkout@v2
     - name: Hello world action step
       id: hello
-      uses: nellyk/task-list-pr-checker@v1
+      uses: ./
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
