--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
   hello_world_job:
     runs-on: ubuntu-latest
     name: A job to say hello
-    - uses: actions/checkout@v2
+    steps:
     - name: Hello world action step
       id: hello
       uses: ./
