--- a/.github/workflows/pr_review_comment.yml
+++ b/.github/workflows/pr_review_comment.yml
@@ -6,9 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
-    - uses: actions/checkout@v2
     - name: Hello world action step
       id: hello
-      uses: ./
+      uses: nellyk/task-list-pr-checker@v1
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
