--- a/.github/workflows/commit-messages.yml
+++ b/.github/workflows/commit-messages.yml
@@ -8,9 +8,6 @@ jobs:
         env:
           GITHUB_CONTEXT: ${{ github.event.pull_request.commits_url }}
         run: echo "$GITHUB_CONTEXT"
-      - run: curl -o out.json ${{ github.event.pull_request.commits_url }}
-      - name: Upload artifact
-        uses: actions/upload-artifact@v1.0.0
-        with:
-          name: commits
-          path: out.json
+      - run: |
+           COMMIT_MESSAGEs= curl ${{ github.event.pull_request.commits_url }} | jq '[.[] | {message: .commit.message, name: .commit.committer.name, parents: [.parents[].html_url]}]'
+           echo ::set-output name=commit_messages::${COMMIT_MESSAGEs}
