--- a/.github/workflows/commit-messages.yml
+++ b/.github/workflows/commit-messages.yml
@@ -2,18 +2,15 @@ name: PR commits
 on: pull_request
 jobs:
   one:
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
     steps:
       - name: Dump GitHub context
         id: set_commit_messages
-        env:
-          GITHUB_CONTEXT: ${{ github.event.pull_request.commits_url }}
-        run: echo "$GITHUB_CONTEXT"
-      - run: |
+        run: |
            COMMIT_MESSAGES= curl ${{ github.event.pull_request.commits_url }} | jq '[.[] | {message: .commit.message, name: .commit.committer.name, parents: [.parents[].html_url]}]'
            echo ::set-output name=commit_messages::${COMMIT_MESSAGES}
       - name: Create comment
-      - uses: peter-evans/create-or-update-comment@v1
+        uses: peter-evans/create-or-update-comment@v1
         with:
           issue-number: 66
           body: |
