--- a/.github/workflows/commit-messages.yml
+++ b/.github/workflows/commit-messages.yml
@@ -4,15 +4,10 @@ jobs:
   one:
     runs-on: ubuntu-latest
     steps:
-      - name: Dump GitHub context
-        id: set_commit_messages
-        run: |
-           COMMIT_MESSAGES= ( $(curl ${{ github.event.pull_request.commits_url }} | jq '[.[] | {message: .commit.message, name: .commit.committer.name, parents: [.parents[].html_url]}]'))
-           echo ::set-output name=commit_messages::${COMMIT_MESSAGES}
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v1
         with:
           issue-number: 66
           body: |
-            ${{ steps.set_commit_messages.outputs.commit_messages }}
+            curl ${{ github.event.pull_request.commits_url }} jq '[.[] | {message: .commit.message, name: .commit.committer.name, parents: [.parents[].html_url]}]'
           reactions: 'rocket'
