--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -11,6 +11,6 @@ jobs:
       - uses: ahmadnassri/action-dependabot-auto-merge@v2.3
         with:
           github-token: ${{ secrets.PA_TOKEN }}
-          command: "squash and merge"
+          command: "merge"
           approve: true
           target: minor
