chore(actions): commit message

--- a/.github/workflows/commit-messages.yml
+++ b/.github/workflows/commit-messages.yml
@@ -1,5 +1,8 @@
 name: PR commits
-on: pull_request
+on: 
+  pull_request:
+  repository_dispatch:
+    types: [commit_messages]
 jobs:
   one:
     runs-on: ubuntu-latest
@@ -13,7 +16,8 @@ jobs:
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v1
         with:
-          issue-number: 66
+          issue-number: | 
+                   ${{ github.event.client_payload.commit_messages }}
           body: |
             ${{ steps.set_commit_messages.outputs.commit_messages }}
           reactions: 'rocket'
