chore(actions): trigger pull request

--- a/.github/workflows/commit-messages.yml
+++ b/.github/workflows/commit-messages.yml
@@ -10,14 +10,14 @@ jobs:
       - name: Dump GitHub context
         id: set_commit_messages
         run: |
-            content=$(curl -s  ${{ github.event.pull_request.commits_url }}) 
+            content=$(curl -s  ${{ github.event.client_payload.pr_url }}) 
             COMMIT_MESSAGES=$( jq '.[] | .commit.message' <<< "${content}" )
             echo ::set-output name=commit_messages::${COMMIT_MESSAGES}
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v1
         with:
           issue-number: | 
-                   ${{ github.event.client_payload.commit_messages }}
+                   ${{ github.event.client_payload.pr_number }}
           body: |
             ${{ steps.set_commit_messages.outputs.commit_messages }}
           reactions: 'rocket'
