--- a/.github/workflows/automated-pr.yml
+++ b/.github/workflows/automated-pr.yml
@@ -53,6 +53,6 @@ jobs:
           repository: ${{ github.repository }}
           mediaType: '{"previews": ["everest"]}'
           event_type: "commit_messages"
-          client_payload: '{"commit_messages": "${{ steps.cpr.outputs.pull-request-number }}", "pr_url": "${{ steps.cpr.outputs.pull-request-url }}"}'
+          client_payload: '{"pr_number": "${{ steps.cpr.outputs.pull-request-number }}"}'
         env:
           GITHUB_TOKEN: ${{ secrets.PA_TOKEN }}
